contrib/codegen/tests/ui-fail/database-types.stderr
error[E0277]: the trait bound `Unknown: Poolable` is not satisfied
 --> tests/ui-fail/database-types.rs:7:10
  |
7 | struct A(Unknown);
  |          ^^^^^^^ the trait `Poolable` is not implemented for `Unknown`
  |
  = help: the trait `Poolable` is implemented for `SqliteConnection`

error[E0277]: the trait bound `Vec<i32>: Poolable` is not satisfied
  --> tests/ui-fail/database-types.rs:11:10
   |
11 | struct B(Vec<i32>);
   |          ^^^^^^^^ the trait `Poolable` is not implemented for `Vec<i32>`
   |
   = help: the trait `Poolable` is implemented for `SqliteConnection`
